--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-fixed-top bg-primary text-white" style='background: rgb(13, 73, 192); border-color: rgb(241, 201, 51); border-bottom-style: solid'>
-        <div class="container">
+    <nav class="navbar navbar-fixed-top bg-primary text-white" style='background: rgb(13, 73, 192); border-color: rgb(241, 201, 51); border-bottom-style: solid; min-height: 80px'>
+        <div class="container text-white">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -26,18 +26,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">web</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
+                
+                <h1 class="display-1" style='font-weight: 700'><img src='images/ryanair.png' style='max-height: 50px'>RYANDISPAIR</h1>
             </div>
         </div>
     </nav>
-    <div style='background: rgb(32, 145, 235); min-height: 30px'>
+
+    <br />
+    <div style='background: rgb(32, 145, 235);'>
+        <div class="container text-white">
+            <h2>Cheap Fares!</h2>
+        </div>
     </div>
 
     <br />
