Added social test data.

--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
     <br />
     <div style='background: rgb(32, 145, 235);'>
         <div class="container text-white">
-            <h2>Cheap Fares!</h2>
+            <h2>We use DATA so YOU don't have to!</h2>
         </div>
     </div>
 
