--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
     </nav>
 
     <br />
-    <div style='background: rgb(32, 145, 235);'>
+    <div style='background: rgb(32, 145, 235); min-height: 10px'>
         <div class="container text-white">
-            <h2>We use DATA so YOU don't have to!</h2>
+            <!-- <h2>We use DATA so YOU don't have to!</h2> -->
         </div>
     </div>
 
