--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -2,6 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div class='row'>
+    <div class='col-md-12 align-center' style="display: flex; flex-direction: row; justify-content: center">
+        <img src='images/holiday1.jpg' style='max-width: 300px; max-height: 150px'>
+        <img src='images/holiday2.jpg' style='max-width: 300px; max-height: 150px'>
+        <img src='images/holiday3.jpg' style='max-width: 300px; max-height: 150px'>
+    </div>
+</div>
+
+<br />
+<br />
+
 <div class='row text-center'>
     <div class='col-md-12'>
         <form class="form-inline" role="form">
@@ -18,42 +29,27 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
+<br />
+<br />
+<br />
+
+<div class="row text-center">
+    <div class="col-md-12">
+        <h3><em>Special Offers</em></h3>
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
+</div>
+
+<div class="row text-center">
+    <div class="col-md-4">
+        <h2>Oxygen offer!</h2>
+        <p>Free Oxygen for the over 60's!</p>
     </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
+    <div class="col-md-4">
+        <h2>Get a Free Flight!</h2>
+        <p>Pay your fee by working as a steward!</p>
     </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
+    <div class="col-md-4">
+        <h2>50% Off!</h2>
+        <p>Save money by visiting War Zones!</p>
     </div>
 </div>
