--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 
 <div class='row text-center'>
     <div class='col-md-12'>
-        <form class="form-inline" role="form">
+        <form class="form-inline" role="form" asp-action='IndexPost'>
             <div class="form-group">
                 <label for="exampleInputEmail2">From:</label>
                 <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Manchester">
@@ -24,13 +24,11 @@
                 <label for="exampleInputPassword2">To: </label>
                 <input type="text" class="form-control" id="exampleInputPassword2" placeholder="Barcelona">
             </div>
-            <button type="submit" class="btn btn-default">Go!</button>
+            <button type="submit" class="btn btn-default">Go!</button> 
         </form>
     </div>
 </div>
 
-<br />
-<br />
 <br />
 
 <div class="row text-center">
