minor update to home

--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -1,7 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<div class='row'>
+    <div class='col-md-12 align-center' style="display: flex; flex-direction: row; justify-content: center">
+        <h2 style="font-style:italic; font-weight:bold">We work hard to make your flight as miserable as possible!</h2>
+    </div>
+</div>
+<br>
 <div class='row'>
     <div class='col-md-12 align-center' style="display: flex; flex-direction: row; justify-content: center">
         <img src='images/holiday1.jpg' style='max-width: 300px; max-height: 150px'>
