--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - web</p>
+            <p>&copy; 2018 - RyanDispair</p>
         </footer>
     </div>
 
