--- a/web/Views/Home/Register.cshtml
+++ b/web/Views/Home/Register.cshtml
@@ -23,14 +23,26 @@
     <div class="col-md-4">
         <form role="form" asp-action='Register'>
             <div class="form-group">
-                <label for="exampleInputEmail1">Address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Street">
+                <label for="first-name">First Name</label>
+                <input type="text" class="form-control" id="firstNameInput" placeholder="John">
+                <label for="surname">Last Name</label>
+                <input type="text" class="form-control" id="lastNameInput" placeholder="Doe">
+                <label for="email">Email Address</label>
+                <input type="email" class="form-control" id="emailInput">
+                <label for="password">Password</label>
+                <input type="text" class="form-control" id="passwordInput">
+                <label for="password-confirm">Confirm Password</label>
+                <input type="text" class="form-control" id="passwordConfirmInput">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="City">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Postcode">
+                <label for="homeowner-check">Are you a homeowner?<input type="checkbox" class="form-control" id="homeownerCheck"></label>
+                <br>
+                <label for="street-address">Street Address</label>
+                <input type="text" class="form-control" id="streetAddressInput">
+                <label for="city">Town/City</label>
+                <input type="text" class="form-control" id="cityInput">
+                <label for="postcode">Postcode</label>
+                <input type="text" class="form-control" id="postcodeInput">
             </div>
             <button type="submit" class="btn btn-default">Continue</button>
         </form>
