--- a/web/Views/Home/Confirmation.cshtml
+++ b/web/Views/Home/Confirmation.cshtml
@@ -1,4 +1,23 @@
 @{
     ViewData["Title"] = "Confirmation";
 }
-
+<div class="row">
+    <div class="col-md-12 text-center">
+        <h1>Congratulations Mr Anderson!</h1>
+        <h4>You are on the way to your nightmare holiday!</h4>
+    </div>
+</div>
+<br>
+<div class="row" style="margin-top:5%">
+    <div class="col-md-12 text-center">
+        <h3>We have selected you the best seats to make you as miserable as possible!</h3>
+    </div> 
+</div>
+<br>
+<div class="row" style="margin-top:1%">
+    <div class="col-md-12 text-center">
+        <h2>We have allocated you in the:</h2>
+        <br>
+        <h1>Quiet Zone</h1>
+    </div>
+</div>
