--- a/web/Views/Home/Register.cshtml
+++ b/web/Views/Home/Register.cshtml
@@ -24,15 +24,15 @@
         <form role="form" asp-action='Register'>
             <div class="form-group">
                 <label for="first-name">First Name</label>
-                <input type="text" class="form-control" id="firstNameInput" placeholder="John">
+                <input type="text" class="form-control" id="firstNameInput" placeholder="John" name="firstNameInput">
                 <label for="surname">Last Name</label>
-                <input type="text" class="form-control" id="lastNameInput" placeholder="Doe">
+                <input type="text" class="form-control" id="lastNameInput" placeholder="Doe" name="lastNameInput">
                 <label for="email">Email Address</label>
-                <input type="email" class="form-control" id="emailInput">
+                <input type="email" class="form-control" id="emailInput" name="emailInput">
                 <label for="password">Password</label>
-                <input type="text" class="form-control" id="passwordInput">
+                <input type="password" class="form-control" id="passwordInput" name="passwordInput">
                 <label for="password-confirm">Confirm Password</label>
-                <input type="text" class="form-control" id="passwordConfirmInput">
+                <input type="password" class="form-control" id="passwordConfirmInput" name="passwordInput">
             </div>
             <div class="form-group">
                 <label for="homeowner-check">Are you a homeowner?<input type="checkbox" class="form-control" id="homeownerCheck"></label>
